try to recursively ingore ReconcilingEmergences directory

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 random_pieces_of_code.m
 
 # GitHub repo that needs to be cloned manually
-/external/ReconcilingEmergences/
+external/ReconcilingEmergences/**
 
 # matlab temporary files
 *.asv
