add: untitled.m file to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 
 # experimental
 random_pieces_of_code.m
+untitled.m
 
 # GitHub repo that needs to be cloned manually
 external/ReconcilingEmergences/**
